[package]
name = "openapi"
version = "0.14.0-preview.12"
authors = ["OpenAPI Generator team and contributors"]
edition = "2021"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
anyhow = { version = "1.0" }
reqwest = { version = "0.11.13", features = ["json"] }

[dev-dependencies]
